[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = ""
authors = ["Bug03 <90082574+Bug03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
langchain = "^0.3.1"
langgraph = "^0.2.28"
langchainhub = "^0.1.21"
langchain-community = "^0.3.1"
tavily-python = "^0.5.0"
langchain-chroma = "^0.1.4"
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
